--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
     <title>React App</title>
   </head>
   <body class="light-theme">
